--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Leo</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
+    <link href="css/site.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
 </head>
 <body>
 <div class="page">
+    <div class="intro-container">
+        <div class="intro-content">
 
+        <a href="#" class="block">
+            <div>
+                Вы инвестируете / строите
+            </div>
+        </a>
+
+        <a href="#" class="block">
+            <div>
+                Вы продаете / создаете
+            </div>
+        </a>
+        <div class="logo-intro"></div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
