--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Leo</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
     <link href="css/site.css" rel="stylesheet" type="text/css">
+    <link href="css/tmp.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
 </head>
@@ -13,19 +14,24 @@
     <div class="intro-container">
         <div class="intro-content">
 
-        <a href="#" class="block">
-            <div>
-                Вы инвестируете / строите
-            </div>
-        </a>
+            <a href="#" class="block">
+                <div>
+                    Вы инвестируете / строите
+                </div>
+            </a>
 
-        <a href="#" class="block">
-            <div>
-                Вы продаете / создаете
-            </div>
-        </a>
-        <div class="logo-intro"></div>
+            <a href="#" class="block">
+                <div>
+                    Вы продаете / создаете
+                </div>
+            </a>
+
+            <div class="logo-intro"></div>
         </div>
+    </div>
+    <div class="imagine">
+        Представьте себе<br>
+        надежного партнера
     </div>
 </div>
 </body>
