--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
     <link href="css/site.css" rel="stylesheet" type="text/css">
     <link href="css/tmp.css" rel="stylesheet" type="text/css">
+    <link href="css/intro.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
 </head>
