--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div class="page">
+
     <div class="navigation-container">
         <div class="category-title">
             <span>Я создаю</span>
@@ -23,8 +24,15 @@
             <div class="item"><a href="#">Простой алгоритм партнерства</a></div>
         </div>
     </div>
-
+    <div class="language-switcher">
+        <span>
+            <a href="#">in english</a>
+        </span>
+    </div>
 </div>
-<div class="footer"></div>
+<div class="footer">
+    <div class="copy">&copy; 2014 LeoSLR. Все права защищены</div>
+    <div class="em">Сайт создан в<br><a href="http://eugene-miller.com">Студии Евгения Миллера</a></div>
+</div>
 </body>
 </html>
