--- a/main.html
+++ b/main.html
@@ -11,9 +11,20 @@
 </head>
 <body>
 <div class="page">
+    <div class="category-title">
+        Сделано
+    </div>
+    <div class="product-selector-container">
+        <select class="product-selector">
+            <option value="1">ТЦ &laquo;Аль Шаппоне&raquo;</option>
+            <option value="1">ТЦ &laquo;Аль Шаппоне&raquo;</option>
+            <option value="1">ТЦ &laquo;Аль Шаппоне&raquo;</option>
+            <option value="1">ТЦ &laquo;Аль Шаппоне&raquo;</option>
+        </select>
+    </div>
 
     <div class="navigation-container">
-        <div class="category-title">
+        <div class="categories-title">
             <span>Я создаю</span>
         </div>
         <div class="menu">
