--- a/main.html
+++ b/main.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
 </head>
 <body>
-<div class="page">
+<div id="page">
+    <div id="bg-layer"></div>
     <div class="category-title">
         Сделано
     </div>
