--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
     <link href="css/site.css" rel="stylesheet" type="text/css">
     <link href="css/tmp.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
+    <link href="vendor/jquery-ui.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/jquery-ui.structure.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="vendor/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
 </head>
 <body>
@@ -41,6 +44,22 @@
             <a href="#">in english</a>
         </span>
     </div>
+
+    <div id="contentFrameWrapper">
+        <div id="contentFrame">
+            <div id="contentContainer">
+                <div class="title">
+                    результат, поражающий воображение
+                </div>
+                <div class="text">
+                    12 дней, чтобы организовать и завезти нужные материалы. Несколько часов, чтобы разбудить гномиков. И
+                    сутки на застройку. <br>
+                    Интерьер готов, кто бы что не говорил!
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="footer">
     <div class="copy">&copy; 2014 LeoSLR. Все права защищены</div>
