--- a/main.html
+++ b/main.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>Leo</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,400' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="js/data.js?v=0.0.1"></script>
     <link href="css/site.css" rel="stylesheet" type="text/css">
     <link href="css/tmp.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
     <link href="vendor/jquery-ui.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/jquery-ui.structure.min.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/main.js?v=0.0.1"></script>
+
+    <script type="text/javascript" src="js/leo.js?v=0.0.1"></script>
+    <script type="text/javascript" src="js/init.js?v=0.0.1"></script>
 </head>
 <body>
 <div id="page">
@@ -48,10 +51,10 @@
     <div id="contentFrameWrapper">
         <div id="contentFrame">
             <div id="contentContainer">
-                <div class="title">
+                <div id="title">
                     результат, поражающий воображение
                 </div>
-                <div class="text">
+                <div id="text">
                     12 дней, чтобы организовать и завезти нужные материалы. Несколько часов, чтобы разбудить гномиков. И
                     сутки на застройку. <br>
                     Интерьер готов, кто бы что не говорил!
