--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="css/tmp.css" rel="stylesheet" type="text/css">
     <link href="css/intro.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="vendor/js/jquery-1.11.1.min.js"></script>
+
+    <script type="text/javascript" src="js/leo.js?v=0.0.1"></script>
+    <script type="text/javascript" src="js/data.js?v=0.0.1"></script>
     <script type="text/javascript" src="js/init.js?v=0.0.1"></script>
 </head>
 <body>
