--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="vendor/jquery-ui.min.js"></script>
 
     <script type="text/javascript" src="js/leo.js?v=0.0.1"></script>
+    <script type="text/javascript" src="js/data.js?v=0.0.1"></script>
     <script type="text/javascript" src="js/init.js?v=0.0.1"></script>
 </head>
 <body>
