--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
         надежного партнера
     </div>
 </div>
+<div id="hiddencontent">
+    <img src="images/bg.png">
+    <img src="images/bg2.png">
+</div>
 </body>
 </html>
