--- a/main.html
+++ b/main.html
@@ -53,12 +53,12 @@
         <div id="contentFrame">
             <div id="contentContainer">
                 <div id="title">
-                    результат, поражающий воображение
+                    <!--результат, поражающий воображение-->
                 </div>
                 <div id="text">
-                    12 дней, чтобы организовать и завезти нужные материалы. Несколько часов, чтобы разбудить гномиков. И
-                    сутки на застройку. <br>
-                    Интерьер готов, кто бы что не говорил!
+                    <!--12 дней, чтобы организовать и завезти нужные материалы. Несколько часов, чтобы разбудить гномиков. И-->
+                    <!--сутки на застройку. <br>-->
+                    <!--Интерьер готов, кто бы что не говорил!-->
                 </div>
             </div>
         </div>
@@ -69,5 +69,7 @@
     <div class="copy">&copy; 2014 LeoSLR. Все права защищены</div>
     <div class="em">Сайт создан в<br><a href="http://eugene-miller.com">Студии Евгения Миллера</a></div>
 </div>
+
+
 </body>
 </html>
